--- a/WindowsWeb/app.env.json
+++ b/WindowsWeb/app.env.json
@@ -24,4 +24,30 @@
     },
     "installedApp" : false
   } ]
+}, {
+  "envName" : "TiecheApp",
+  "mobileWeb" : false,
+  "applicationsUrl" : [ {
+    "name" : "WindowsWeb",
+    "url" : "https://tiecheusa.com/website",
+    "app" : {
+      "appPackageOrBundleId" : null,
+      "xcodeOrgId" : null,
+      "xcodeSigningId" : null,
+      "updatedWDABundleId" : null,
+      "activity" : null
+    },
+    "installedApp" : false
+  }, {
+    "name" : "TestSubApp1",
+    "url" : "https://tiecheusa.com/website/test-automation-solutions",
+    "app" : {
+      "appPackageOrBundleId" : null,
+      "xcodeOrgId" : null,
+      "xcodeSigningId" : null,
+      "updatedWDABundleId" : null,
+      "activity" : null
+    },
+    "installedApp" : false
+  } ]
 } ]
